--- a/disposables-core/build.gradle
+++ b/disposables-core/build.gradle
@@ -9,6 +9,7 @@ targetCompatibility = 1.7
 dependencies {
   compile 'com.google.code.findbugs:jsr305'
   testCompile 'junit:junit'
+  testCompile 'org.mockito:mockito-core'
   testCompile 'org.easytesting:fest-assert-core'
 }
 
