--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-deployable.pom.description=A java library for dealing with objects that need to be disposed
+deployable.pom.description=An experimental java library for dealing with objects that need to be disposed
 deployable.pom.url=https://github.com/episode6/disposables
 deployable.pom.scm.url=extensible
 deployable.pom.scm.connection=scm:https://github.com/episode6/disposables.git
