--- a/pausables-core/build.gradle
+++ b/pausables-core/build.gradle
@@ -11,6 +11,8 @@ dependencies {
   compile 'com.google.code.findbugs:jsr305'
   testCompile 'junit:junit'
   testCompile 'org.mockito:mockito-core'
+  testCompile 'org.powermock:powermock-api-mockito2'
+  testCompile 'org.powermock:powermock-module-junit4'
   testCompile 'org.easytesting:fest-assert-core'
 }
 
