--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
   }
 
   group = 'com.episode6.hackit.disposable'
-  version = '0.0.3-SNAPSHOT'
+  version = '0.0.3'
 }
 
 task clean(type: Delete) {
