disposable-butterknife should match minSdk of butterknife

--- a/disposable-butterknife/build.gradle
+++ b/disposable-butterknife/build.gradle
@@ -10,6 +10,10 @@ android {
   compileSdkVersion gdmcVersion('android.compilesdk') as Integer
   buildToolsVersion gdmcVersion('android.buildtools')
 
+  defaultConfig {
+    minSdkVersion 9
+  }
+
   buildTypes {
     release {
       minifyEnabled false
