--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
   }
 
   group = 'com.episode6.hackit.disposable'
-  version = '0.0.5-SNAPSHOT'
+  version = '0.0.5'
 }
 
 task clean(type: Delete) {
