--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':disposables-core', ':disposable-futures', ':pausables-core', ':disposable-butterknife'
+include ':disposables-core', ':disposable-futures', ':pausables-core', ':disposable-butterknife', ':disposable-android'
