checkin - this has been sitting in my working tree for a while, might as well commit it before I deprecate this library

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':disposables-core', ':disposable-futures', ':pausables-core', ':disposable-butterknife', ':disposable-android', ':pausable-android', ':disposable-rx'
+include ':disposables-core', ':disposable-futures', ':pausables-core', ':disposable-butterknife', ':disposable-android', ':pausable-android', ':disposable-rx', ':pausable-rx'
